Fixed appearance of Contact title on smaller screens

--- a/app/routes/contact/route.module.scss
+++ b/app/routes/contact/route.module.scss
@@ -1,7 +1,7 @@
 .header1 {
     text-align: center;
     color: var(--snow-white);
-    padding: 150px;
+    padding: 150px 100px;
 }
 .div1 {
     background-repeat: no-repeat;
